# Session-Dualsense-Mod

./: CMakeLists.txt  README.md
src/: session-dualsense-mod.cpp  test-device-initialization.cpp
